{
    "name": "Player Controls",
    "maps": [
        {
            "name": "GroundMovement",
            "id": "f26049e8-e4c8-41c6-b5bd-e742e87ac11f",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "PassThrough",
                    "id": "401cbda5-aa13-42d0-9d40-85a80d8ba106",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "528236e5-7664-42ec-89a9-b8e9e39240c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "33ec2875-eb7f-474f-96e6-f91c5978de9c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "ab583b51-c8f4-4cee-b285-d8bb70891e10",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "35ca3b04-e499-4dac-ba13-1369f1cc89e6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "10aa371d-ecf8-4fb6-a6d6-5a623a30b314",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c71e01b0-3ec0-417f-8321-6ada6c5fdd20",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a7bc3fe5-9275-4205-b2a6-188f0ca978f8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c1a6acd7-2de2-4c59-9d52-45a9e4d3a058",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0e096f18-905f-49a5-99f7-81b2ba2323e7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fa3758a-e64e-4a80-bdb7-892f2779ec04",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06ff559f-7901-4b94-b76a-19dab570f086",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}